# arcval

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: app-details.md
.github/workflows/: claude-code-review.yml  publish.yml  tests.yml
arcval/: __init__.py  cli.py  connections.py  judges.py  langfuse.py  rate_limit.py  slack.py  status.py  utils.py
arcval/agent/: __init__.py  bot.py  run_simulation.py  test.py
arcval/arctan_eval/: __init__.py  benchmark.py  leaderboard.py  preprocess.py
arcval/general/: __init__.py  eval.py  metrics.py
arcval/llm/: __init__.py  _output.py  benchmark.py  metrics.py  run_simulation.py  run_tests.py  simulation_leaderboard.py  tests_leaderboard.py
arcval/stt/: __init__.py  benchmark.py  eval.py  leaderboard.py  metrics.py
arcval/tts/: __init__.py  benchmark.py  eval.py  leaderboard.py  metrics.py
arcval/ui/: __init__.py  cli.bundle.mjs
calibrate/: __init__.py  cli.py  connections.py  judges.py  rate_limit.py  utils.py
calibrate/agent/: __init__.py  bot.py  run_simulation.py
calibrate/general/: __init__.py  eval.py  metrics.py
calibrate/llm/: __init__.py  _metrics_utils.py  benchmark.py  metrics.py  run_simulation.py  run_tests.py  simulation_leaderboard.py  tests_leaderboard.py
calibrate/stt/: __init__.py  benchmark.py  eval.py  leaderboard.py  metrics.py
calibrate/tts/: benchmark.py  eval.py  leaderboard.py  metrics.py
calibrate/ui/: cli.bundle.mjs
docs/: README.md  docs.json
docs/cli/: overview.mdx  simulations.mdx  speech-to-text.mdx  text-to-speech.mdx  text-to-text.mdx
docs/core-concepts/: agent-connections.mdx  agents.mdx  text-to-text.mdx
examples/stt/: config.json  (+1 more)
leaderboard/: arctan_eval_leaderboard.xlsx
tests/: test_agent_benchmarking.py  test_agent_connection.py  test_agent_init_extra.py  test_benchmarks.py  test_cli.py  test_cli_main.py  test_connections.py  test_connections_extra.py  test_judges.py  test_judges_extra.py  test_langfuse_extra.py  test_leaderboards_extra.py  test_llm_leaderboards_extra.py  test_metrics_extra.py  test_misc_extra.py  test_rate_limit.py  test_run_tests_multi_criteria.py  test_sdk_judge_regressions.py  test_simulation_integration.py  test_status.py  test_stt_tts_leaderboard.py  test_stt_tts_multi_criteria.py  test_tests_leaderboard.py  test_utils.py  test_utils_audio.py  test_utils_factories.py
ui/: package-lock.json  package.json
(+85 files in other folders)
