[project]
name = "arcval"
dynamic = ["version"]
description = "An open-source evaluation framework for voice agents"
readme = "README.md"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
authors = [
    {name = "Aman Dalmia", email = "aman.dalmia@artpark.in"},
]
keywords = ["voice-agents", "evaluation", "benchmarking", "stt", "tts", "llm", "simulation", "pipecat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "arctan-vi>=0.3.0",
    "backoff>=2.2.1",
    "elevenlabs>=2.31.0",
    "evaluate>=0.4.6",
    "indic-nlp-library>=0.92",
    "instructor>=1.13.0",
    "jiwer>=4.0.0",
    "joblib>=1.3.0",
    "langfuse==3.3.0",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.23.2",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pipecat-ai-small-webrtc-prebuilt==1.0.0",
    "pipecat-ai[cartesia,deepgram,google,groq,local-smart-turn-v3,openrouter,tracing,webrtc,websocket]==0.0.98",
    "python-dotenv>=1.2.1",
    "sarvamai>=0.1.21",
    "simpleaudio>=1.0.4",
    "smallestai>=4.0.1",
    "sounddevice>=0.5.3",
    "uvicorn>=0.38.0",
    "whisper-normalizer>=0.1.12",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "pytest>=7.0",
    "pytest-httpserver>=1.0",
    "pytest-cov>=4.0",
]

[project.scripts]
arcval = "arcval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["ui*", "examples*", "docs*", "images*"]

[tool.setuptools.package-data]
"arcval" = [
    "ui/cli.bundle.mjs",
    "stt/sarvam_intent_entity/prompt_template.txt",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"

[tool.uv.workspace]
members = [
    "test",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
